--- a/src/projectfile/PancakeEngine.vcxproj.filters
+++ b/src/projectfile/PancakeEngine.vcxproj.filters
@@ -8,6 +8,9 @@
     <ClCompile Include="..\src\EngineUtils\PancakeEnginePathUtils.cpp">
       <Filter>EngineUtils</Filter>
     </ClCompile>
+    <ClCompile Include="..\third\easylogging++\9.97.0\src\easylogging++.cc">
+      <Filter>ThirdParty\easylogging++</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="EngineUI">
@@ -15,6 +18,12 @@
     </Filter>
     <Filter Include="EngineUtils">
       <UniqueIdentifier>{0a3e8a1c-5499-437f-acbf-9ff6651fbf02}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty">
+      <UniqueIdentifier>{bb727931-b715-4063-8b30-14f7b7bb64b1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty\easylogging++">
+      <UniqueIdentifier>{283fe2fe-310c-4c9a-a259-539403e2defb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
