--- a/src/projectfile/PancakeEngine.vcxproj.filters
+++ b/src/projectfile/PancakeEngine.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClInclude Include="..\src\EngineUI\UIControlName.h">
       <Filter>EngineUI</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\EngineUI\CWndUI.h">
+      <Filter>EngineUI</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
